@@ -431,8 +431,9 @@ Texture *Scene::CreateTexture(const string &texName, const Properties &props) {
 		tex = new CloudTexture(CreateTextureMapping3D(propName + ".mapping", props), radius, noisescale, turbulence,
 								sharpness, noiseoffset, spheres, octaves, omega, variability, baseflatness, spheresize);
 	} else if (texType == "blackbody") {
-		const float v = props.Get(Property(propName + ".temperature")(6500.f)).Get<float>();
-		tex = new BlackBodyTexture(v);
+		const float temperature = props.Get(Property(propName + ".temperature")(6500.f)).Get<float>();
+		const bool normalize = props.Get(Property(propName + ".normalize")(false)).Get<bool>();
+		tex = new BlackBodyTexture(temperature, normalize);
 	} else if (texType == "irregulardata") {
 		if (!props.IsDefined(propName + ".wavelengths"))
 			throw runtime_error("Missing wavelengths property in irregulardata texture: " + propName);
