@@ -28,7 +28,8 @@ using namespace slg;
 // Black body texture
 //------------------------------------------------------------------------------
 
-BlackBodyTexture::BlackBodyTexture(const float temp) : temperature(temp) {
+BlackBodyTexture::BlackBodyTexture(const float temp, const bool norm) :
+		temperature(temp), normalize(norm) {
 	BlackbodySPD spd(temperature);
 
 	ColorSystem colorSpace;
@@ -45,7 +46,8 @@ BlackBodyTexture::BlackBodyTexture(const float temp) : temperature(temp) {
 	cout << maxValue << "\n";*/
 	
 	// To normalize rgb, divide by maxValue
-	//rgb /= 89159.6f;
+	if (normalize)
+		rgb /= 89159.6f;
 }
 
 Properties BlackBodyTexture::ToProperties(const ImageMapCache &imgMapCache, const bool useRealFileName) const {
@@ -54,6 +56,7 @@ Properties BlackBodyTexture::ToProperties(const ImageMapCache &imgMapCache, cons
 	const string name = GetName();
 	props.Set(Property("scene.textures." + name + ".type")("blackbody"));
 	props.Set(Property("scene.textures." + name + ".temperature")(temperature));
+	props.Set(Property("scene.textures." + name + ".normalize")(normalize));
 
 	return props;
 }
